<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/final_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/bye_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repetitions"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297" />

    <TextView
        android:id="@+id/down_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566" />

    <EditText
        android:id="@+id/bye_message"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/up_text"
        android:hint="@string/ex_bye"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/repetitions"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/down_text"
        android:hint="@string/ex_6"
        android:inputType="number"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>